media/lies.css
html {
    background-color: #060080;
}
body {
    background-color: #060080;
}

#doc {
    background-color: #060080;
}

#bd {
    color: #060080;
    font-size: 189%;
}

#hd {
    background-color: #060080;
    letter-spacing:-2;
    overflow: visible;
}

#hd h1 {
    color: #0c00ff;
    font-size: 500%;
    padding: 0.5%;
    margin: 0.5%;
    text-align: center;
    font-variant: small-caps;
}

#bd ul li {
    padding: 3%;
    color: #c2bfff;
    list-style-type: none;
    border: #060080 solid 1px;
    margin: 1%;
    background-color: #0c00ff;
    font-size:197%;
}

#bd .vote_total {
    font-size:65%;
    color:#060080;
    font-weight:bold;
    position:relative;
    display:block;
    top:-10px;
    float:right;
}

#bd #message {
    color:#060080;
    background-color:yellow;
    padding: 3%;
    opacity:0;filter:alpha(opacity=0);
}

#bd .vote_action img {
    opacity:0.8;filter:alpha(opacity=80);
    padding-right:5px;
    padding-left:5px;
}

#bd #description {
    color:#0c00ff;
}

#bd #description b {
    font-variant: small-caps;
}

